# qi2lab-datastore-viewer

./: .copier-answers.yml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.md  feature_request.md
src/qi2lab_datastore_viewer/: __init__.py  _widget.py  napari.yaml  qi2labDataStore.py  test_reader.py
tests/: test_reader.py  test_sample_data.py  test_widget.py
